log
Fri 10 May 2024 12:25:49 AM UTC: 
 tests:  1|8
total_score: 0/70
68e01b8
Fri 10 May 2024 12:29:44 AM UTC: 
 treemap.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
b7f309b
Fri 10 May 2024 12:34:39 AM UTC: 
 treemap.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  5|7
total_score: 5/70
4f05b81
Fri 10 May 2024 12:35:15 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 5/70
b173d37
Fri 10 May 2024 12:35:46 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  5|7
total_score: 5/70
24a79ec
Fri 10 May 2024 12:43:59 AM UTC: 
 treemap.c | 21 ++++-----------------
 1 file changed, 4 insertions(+), 17 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:54:19: error: variable ‘parent’ set but not used [-Werror=unused-but-set-variable]
   54 |         TreeNode *parent = NULL;
      |                   ^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b99d92
Fri 10 May 2024 12:44:34 AM UTC: 
 treemap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|7
total_score: 5/70
a4cd6e5
Fri 10 May 2024 12:45:21 AM UTC: 
 treemap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  5|7
total_score: 5/70
79a5327
Fri 10 May 2024 12:52:57 AM UTC: 
 treemap.c | 15 ++++++++++++---
 1 file changed, 12 insertions(+), 3 deletions(-)
 tests:  4|7
total_score: 5/70
5baedbe
Fri 10 May 2024 12:55:44 AM UTC: 
 treemap.c | 29 +----------------------------
 1 file changed, 1 insertion(+), 28 deletions(-)
 tests:  4|7
total_score: 5/70
2378d3f
Fri 10 May 2024 12:58:09 AM UTC: 
 treemap.c | 30 ++++++++++++++++++++++++++++++
 1 file changed, 30 insertions(+)
In file included from test.c:4:
treemap.c:86:1: error: expected identifier or ‘(’ before ‘}’ token
   86 | }
      | ^
Compilation failed
d1287ef
Fri 10 May 2024 12:58:17 AM UTC: 
 treemap.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  6|6
total_score: 15/70
2e9dbf8
Fri 10 May 2024 12:58:55 AM UTC: 
 treemap.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  8|5
total_score: 15/70
81b3d0b
Fri 10 May 2024 01:01:42 AM UTC: 
 treemap.c | 42 +++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 41 insertions(+), 1 deletion(-)
 tests:  8|5
total_score: 15/70
5f0af83
Fri 10 May 2024 01:01:59 AM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|5
total_score: 15/70
183445c
Fri 10 May 2024 01:02:38 AM UTC: 
 treemap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  8|5
total_score: 15/70
5f7ef9e
